--- a/src/RealTimeTranslator.ASR/RealTimeTranslator.ASR.csproj
+++ b/src/RealTimeTranslator.ASR/RealTimeTranslator.ASR.csproj
@@ -13,7 +13,9 @@
 
   <ItemGroup>
     <PackageReference Include="Whisper.net" Version="1.5.0" />
+    <!-- NVIDIA CUDA ランタイム -->
     <PackageReference Include="Whisper.net.Runtime.Cublas" Version="1.5.0" />
+    <!-- AMD Vulkan ランタイム（採用） -->
     <PackageReference Include="Whisper.net.Runtime.Vulkan" Version="1.5.0" />
     <PackageReference Include="NAudio" Version="2.2.1" />
   </ItemGroup>
