CPUランタイムパッケージを追加
Whisper.netのCPUモードで動作するために、Whisper.net.Runtimeパッケージを追加。
これにより、GPUが無効な場合でもCPUモードで動作するようになります。

原因: CPUモードで実行する場合、Whisper.net.Runtimeパッケージが必要だが、
プロジェクトにはWhisper.net.Runtime.CublasとWhisper.net.Runtime.Vulkan
しか含まれていなかったため、CreateBuilder()で失敗していた。

--- a/src/RealTimeTranslator.UI/settings.json
+++ b/src/RealTimeTranslator.UI/settings.json
@@ -6,7 +6,7 @@
     "UseBeamSearch": true,
     "BeamSize": 5,
     "GPU": {
-      "Enabled": true,
+      "Enabled": false,
       "DeviceId": 0,
       "Type": "Auto"
     }
