--- a/src/RealTimeTranslator.ASR/RealTimeTranslator.ASR.csproj
+++ b/src/RealTimeTranslator.ASR/RealTimeTranslator.ASR.csproj
@@ -13,9 +13,11 @@
 
   <ItemGroup>
     <PackageReference Include="Whisper.net" Version="1.9.0" />
+    <!-- CPU ランタイム -->
+    <PackageReference Include="Whisper.net.Runtime" Version="1.9.0" />
     <!-- NVIDIA CUDA ランタイム -->
     <PackageReference Include="Whisper.net.Runtime.Cublas" Version="1.5.0" />
-    <!-- AMD Vulkan ランタイム（採用） -->
+    <!-- AMD Vulkan ランタイム -->
     <PackageReference Include="Whisper.net.Runtime.Vulkan" Version="1.9.0" />
     <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="System.Management" Version="10.0.1" />
