オーディオキャプチャの再試行ロジック改善：タイムアウト処理追加

--- a/src/RealTimeTranslator.ASR/RealTimeTranslator.ASR.csproj
+++ b/src/RealTimeTranslator.ASR/RealTimeTranslator.ASR.csproj
@@ -13,10 +13,10 @@
 
   <ItemGroup>
     <PackageReference Include="Whisper.net" Version="1.9.0" />
-    <!-- CPU ランタイム -->
+    <!-- CPU ランタイム（フォールバック用） -->
     <PackageReference Include="Whisper.net.Runtime" Version="1.9.0" />
     <!-- NVIDIA CUDA ランタイム -->
-    <PackageReference Include="Whisper.net.Runtime.Cublas" Version="1.5.0" />
+    <PackageReference Include="Whisper.net.Runtime.Cuda" Version="1.9.0" />
     <!-- AMD Vulkan ランタイム -->
     <PackageReference Include="Whisper.net.Runtime.Vulkan" Version="1.9.0" />
     <PackageReference Include="NAudio" Version="2.2.1" />
