--- a/src/RealTimeTranslator.Translation/RealTimeTranslator.Translation.csproj
+++ b/src/RealTimeTranslator.Translation/RealTimeTranslator.Translation.csproj
@@ -11,5 +11,9 @@
     <ProjectReference Include="..\RealTimeTranslator.Core\RealTimeTranslator.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ML.OnnxRuntime.Gpu" Version="1.20.1" />
+  </ItemGroup>
+
 
 </Project>
