--- a/src/RealTimeTranslator.UI/settings.json
+++ b/src/RealTimeTranslator.UI/settings.json
@@ -6,7 +6,7 @@
     "UseBeamSearch": true,
     "BeamSize": 5,
     "GPU": {
-      "Enabled": false,
+      "Enabled": true,
       "DeviceId": 0,
       "Type": "Auto"
     }
