--- a/src/RealTimeTranslator.Core/RealTimeTranslator.Core.csproj
+++ b/src/RealTimeTranslator.Core/RealTimeTranslator.Core.csproj
@@ -7,4 +7,9 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NAudio" Version="2.2.1" />
+    <PackageReference Include="System.Management" Version="10.0.1" />
+  </ItemGroup>
+
 </Project>
