--- a/src/RealTimeTranslator.Translation/RealTimeTranslator.Translation.csproj
+++ b/src/RealTimeTranslator.Translation/RealTimeTranslator.Translation.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="LLamaSharp" Version="0.25.0" />
+    <PackageReference Include="LLamaSharp.Backend.Cpu" Version="0.25.0" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime.Gpu" Version="1.23.2" />
     <PackageReference Include="Whisper.net" Version="1.9.0" />
   </ItemGroup>
