--- a/src/RealTimeTranslator.UI/RealTimeTranslator.UI.csproj
+++ b/src/RealTimeTranslator.UI/RealTimeTranslator.UI.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="Velopack" Version="0.0.1298" />
     <PackageReference Include="Whisper.net.Runtime" Version="1.9.0" />
+    <PackageReference Include="Whisper.net.Runtime.Vulkan" Version="1.9.0" />
   </ItemGroup>
 
 </Project>
